Updated all the rest files

--- a/Security_Microservice/src/main/resources/application.properties
+++ b/Security_Microservice/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.cloud.discovery.enabled=true
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+server.port=8787
 
 rsa.public-key= classpath:Keys/publicKey.pem
 rsa.private-key= classpath:Keys/privateKey.pem
