--- a/Chercheur-Service/src/main/resources/application.properties
+++ b/Chercheur-Service/src/main/resources/application.properties
@@ -2,15 +2,7 @@ spring.application.name=Chercheur-Service
 
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3306/chercheur_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
-
-hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
+spring.config.import=optional:configserver:http://localhost:9999 
 
 
 
