--- a/Enseignant-Service/src/main/resources/application.properties
+++ b/Enseignant-Service/src/main/resources/application.properties
@@ -2,14 +2,7 @@ spring.application.name=Enseignant-Service
 
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/enseignant_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
-
-hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.config.import=optional:configserver:http://localhost:9999 
 
 
 
