--- a/Enseignant-Service/src/main/resources/application.properties
+++ b/Enseignant-Service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Enseignant-Service
 
 server.port=8081
 
-spring.config.import=optional:configserver:http://localhost:9999 
+spring.config.import=optional:configserver:${CONFIG_SERVICE_URL:http://localhost:9999} 
 
 
 
