ajout des tests

--- a/Discovery-service/discovery-deploy.yaml
+++ b/Discovery-service/discovery-deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: discovery-service
-          image: labo_discovery_images
+          image: najlaebk1/labo_discovery_images
           imagePullPolicy: Always
           ports:
             - containerPort: 8761
