--- a/Configuration-Service/config-deploy.yaml
+++ b/Configuration-Service/config-deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: config-service
-          image: labo_config_images
+          image: najlaebk1/labo_config_images
           imagePullPolicy: Never
           ports:
             - containerPort: 9999
