--- a/Enseignant-Service/enseignant-deploy.yaml
+++ b/Enseignant-Service/enseignant-deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: config-service
-          image: labo_enseignant_images
+          image: najlaebk1/labo_enseignant_images
           imagePullPolicy: Never
           ports:
             - containerPort: 8081
