--- a/Configuration-Service/src/main/resources/application.properties
+++ b/Configuration-Service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.cloud.config.enabled=true
 eureka.instance.prefer-ip-address=true 
 eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
 ##spring.cloud.config.server.git.uri=file://C:/Users/babar/Atelier_bk/config-lab-repo
-spring.cloud.config.server.git.uri=https://github.com/Najlaebakali/Lab-config-repo.git
+spring.cloud.config.server.git.uri=https://github.com/Najlaebakali/Lab-config-repo
